PROV-2592 Fixes for issues noticed during latest testing: 1. After updating location previous location is hidden until page reload 2. Add object button misaligned 3. Add object button does not respect "hide" option

--- a/themes/default/css/base.css
+++ b/themes/default/css/base.css
@@ -6784,7 +6784,7 @@ div.caHistoryTrackingButtonBar {
 	padding: 10px;
 }
 
-.caChangeLocationButton, .caAddLoanButton, .caAddOccurrenceButton, .caAddCollectionButton, .caSetChildViewButton {
+.caChangeLocationButton, .caAddLoanButton, .caAddOccurrenceButton, .caAddCollectionButton, .caSetChildViewButton, .caAddObjectButton, .caAddEntityButton, .caAddMovementButton, .caAddLoanButton {
 	margin-top: 5px;
 }
 
